--- a/index.ejs
+++ b/index.ejs
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>JavaScript HTML App</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
     <link rel="stylesheet" href="<%= htmlWebpackPlugin.files.css[0] %>">
 </head>
 <body>
