--- a/index.ejs
+++ b/index.ejs
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="app">Hello</div>
+    <div id="name">{{name}}</div>
+    <script src="//cdn.bootcss.com/jquery/1.12.0/jquery.min.js"></script>
+    <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
     <script type="text/javascript" src="<%= htmlWebpackPlugin.files.js[0] %>"></script>
 </body>
 </html>
